--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="author" content="Orkhan">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./img/Google'sFavicon.png" type="image/x-icon">
+    <!-- For Tablet -->
+    <link rel="stylesheet" media="(max-width:768px)" href="./tablet.css">
+    <!-- For Mobile -->
+    <link rel="stylesheet" media="(max-width:500px)" href="./mobile.css">
     <title>Google UI Clone</title>
 </head>
 
